--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"file-loader": "^6.2.0",
 		"gh-pages": "^3.2.3",
 		"html-loader": "^3.0.1",
-		"html-webpack-plugin": "^5.5.0",
+		"html-webpack-plugin": "^5.6.0",
 		"parse-github-url": "^1.0.2",
 		"prettier": "^2.5.1",
 		"remote-origin-url": "^2.0.0",
@@ -79,12 +79,13 @@
 		"@fortawesome/free-regular-svg-icons": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"html-entities": "^2.5.2",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2",
-		"react-router-dom": "^6.4.3"
+		"react-router": "^6.12.1",
+		"react-router-dom": "^6.12.1"
 	}
 }
