--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # track this file .gitignore (i.e. do NOT ignore it)
 !.gitignore
+!.env  # Add this line to ensure .env is not ignored
 !.github
 !.vscode
 php_errorlog
